Registration Backend done

--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -105,11 +105,11 @@
           <div class="col-lg-6 form-field">
             <div class="select-div">
               <div>
-                <select class="select" name="castles">
-                 <option value="">Castle</option>
-                  <option value="Admin">Admin</option>
-                  <option value="Content Writer">Content Writer</option>
-                </select>
+                  <select class="select" name="des">
+                    <option value="">Post</option>
+                    <option value="Admin">Admin</option>
+                    <option value="Content Writer">Content Writer</option>
+                  </select>
               </div>
             </div>
           </div>
