Publish files added

--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -63,7 +63,7 @@
 
 
         </div>
-      <header/>
+      </header>
       <div class="news">
         <h1 class="headline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur recusandae nesciunt corporis officiis voluptatibus minima.</h1>
         <div class="image">
