--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -128,6 +128,16 @@
               </div>
             </div>
           </div>
+          
+          <div class="col-lg-12 form-field">
+            <div class="input-div">
+              <div>
+                <input type="file" name="" id="file" />
+                <label for="file" id="selector">Add Your Image</label>
+              </div>
+            </div>
+          </div>
+          
           <div class="form-field col-lg-12">
             <input type="submit" name="submit" class="btn" value="register" />
           </div>
