icon added to image field

--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -133,7 +133,7 @@
             <div class="input-div">
               <div>
                 <input type="file" name="" id="file" />
-                <label for="file" id="selector">Add Your Image</label>
+                <label for="file" id="selector"><i class="fas fa-upload"></i> Add Your Image</label>
               </div>
             </div>
           </div>
