--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -132,7 +132,7 @@
           <div class="col-lg-12 form-field">
             <div class="input-div">
               <div>
-                <input type="file" name="" id="file" />
+                <input type="file" name="image" id="file" />
                 <label for="file" id="selector">Add Your Image</label>
               </div>
             </div>
