--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -32,10 +32,12 @@
             <i class="far fa-bell"></i>Notifications
           </button>
           <button onclick="showPanel(1)" class="btn">
-            <i class="fas fa-user-check"></i>ID card
+            <i class="fas fa-user-check"></i>Published News
           </button>
           <form action='{{ acc_url }}' class="logout" method="post">{% csrf_token %}
-            <input type="submit" class="btn" value="Logout"/>
+           <input type="submit" class="btn" value="Logout" class="logout" /><i
+              class="fas fa-sign-out-alt logout"
+            ></i>
           </form>
         </div>
         <div class="tab-panel">
