--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -99,6 +99,13 @@ body {
       font-size: 25px;
     }
   }
+
+  a {
+    color: #fff;
+    font-size: 20px;
+    display: block;
+    margin-bottom: 20px;
+  }
 }
 
 @media (min-width: 800px) {
@@ -174,6 +181,7 @@ body {
     color: #ccc;
     border: none;
     font-size: 16px;
+    margin-left: 10px;
   }
 
   form {
