--- a/Classicist Express/denied/templates/denied.html
+++ b/Classicist Express/denied/templates/denied.html
@@ -12,7 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'denied.css' %}" />
-    <title>Denied || CC</title>
+    <link rel="icon" href="{% static 'images/cross.png' %}">
+    <title>Denied || Cultural Classicist</title>
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid">
