--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -37,9 +37,9 @@
           <option value="Bangladesh Affairs">Bangladesh Affairs</option>
           <option value="Cultural Insights<">Cultural Insights</option>
           <option value="Sports Insight">Sports Insight</option>
-          <option value="Achievements">Achievements</option>
-          <option value="Small Talk With Gems(Interviews)">
-            Small Talk With Gems(Interviews)
+          <option value="International Affairs">International Affairs</option>
+          <option value="Small Talk With Gems">
+            Small Talk With Gems
           </option>
           <option value="Cultural Classicists">Cultural Classicists</option>
           <option value="Youth">Youth</option>
