--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -30,7 +30,7 @@
             <div class="input-div">
               <div>
 
-                <h5 for="name" class="label">ID</h5>
+                <h5 for="name" class="label">Username</h5>
                 <input
                   type="text"
                   class="input"
