--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{% static 'home.css' %}" />
-    <link rel="icon" href="{% static 'images/newslogo.png' %}">
+    <link rel="icon" href="{% static 'images/logo.png' %}">
 
     <!-- fontawesome -->
     <script
