--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -54,7 +54,7 @@
           <span class="input-group-text" id="basic-addon1"
             ><i class="fas fa-images"></i
           ></span>
-          <input type="file" class="form-control" id="myFile" name="filename" />
+          <input type="file" class="form-control" id="myFile" name="picnews" />
         </div>
 
       <div class="input-group mb-3">
