--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -38,7 +38,7 @@
               <div class="image">
                 <img src="{% static 'images/newslogo.png' %}" alt="">
               </div>
-              <p>Sunday, 14 July, 2021</p>
+              <p id="datetime"></p>
             </div>
           </div>
 
