api added to all

--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -35,7 +35,7 @@
         <select class="form-select" id="inputGroupSelect01" name="cat">
           <option selected>Choose...</option>
           <option value="Bangladesh Affairs">Bangladesh Affairs</option>
-          <option value="Cultural Insights<">Cultural Insights</option>
+          <option value="Cultural Insights">Cultural Insights</option>
           <option value="Sports Insight">Sports Insight</option>
           <option value="International Affairs">International Affairs</option>
           <option value="Small Talk With Gems">
