--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -79,21 +79,14 @@
         <h2>Top Stories</h2>
         <div class="container-top-left">
           <article>
-            <img src="{% static 'images/top-left.jpg' %}" />
+            <img id="topLeftPicture" />
 
             <div>
-              <h3>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure,
-                autem.
-              </h3>
+              <h3 id="topLeftHeading"></h3>
 
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Blanditiis ea sint, nisi rem earum fugit? Facere veritatis
-                sapiente eveniet quibusdam.
-              </p>
+              <p id="topLeftNews"></p>
 
-              <a href="#">Read More <span>>></span></a>
+              <a id="topLeftLink">Read More <span>>></span></a>
             </div>
           </article>
         </div>
