--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -72,7 +72,7 @@
 
         </div>
       </header>
-{% block 'newsPortal' %}
+{% block 'news' %}
 {% endblock %}
      <footer>
       <div class="footer-container">
