--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block 'newsPortal' %}
+{% block 'news' %}
     <main>
       <section class="main-container-left">
         <h2>Top Stories</h2>
