API added to page and js

--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- header -->
-
+<input type="hidden" id="api" value="{{ api }}">
     <header>
         <div class = "navigation-container">
             <div class = "top-head">
