Home page updated

--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -25,15 +25,12 @@
 
         <div class="container-bottom-left">
           <article>
-            <img src="images/bottom-left-1.jpg" />
+            <img id="bottomLeftPicture" />
             <div>
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Commodi iure modi animi cupiditate. Explicabo, nihil?
-              </p>
+              <h3 id="bottomLeftHeading"></h3>
+              <p id="bottomLeftNews"></p>
 
-              <a href="#">Read More <span>>></span></a>
+              <a id="bottomLeftLink">Read More <span>>></span></a>
             </div>
           </article>
 
