--- a/Classicist Express/home/templates/home.html
+++ b/Classicist Express/home/templates/home.html
@@ -10,17 +10,6 @@
       <section class="main-container-left">
         <h2>Top Stories</h2>
         <div class="container-top-left">
-          <article>
-            <img id="topLeftPicture" />
-
-            <div>
-              <h3 id="topLeftHeading"></h3>
-
-              <p id="topLeftNews"></p>
-
-              <a id="topLeftLink">Read More <span>>></span></a>
-            </div>
-          </article>
         </div>
 
         <div class="container-bottom-left">
@@ -29,87 +18,8 @@
 
       <section class="main-container-right">
         <h2>Latest Stories</h2>
-
-        <article>
-          <h4>just in</h4>
-          <div>
-            <h2>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
-              asperiores repellendus sapiente illum!
-            </h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-
-            <a href="#">Read More <span>>></span></a>
-          </div>
-          <img src="{% static 'images/right-1.jpg' %}" />
-        </article>
-
-        <article>
-          <h4>just in</h4>
-          <div>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-              repellendus?
-            </p>
-
-            <a href="#">Read More <span>>></span></a>
-          </div>
-          <img src="{% static 'images/right-2.jpg' %}" />
-        </article>
-
-        <article>
-          <h4>just in</h4>
-          <div>
-            <h2>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptate, doloribus?
-            </h2>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-              repellendus?
-            </p>
-
-            <a href="#">Read More <span>>></span></a>
-          </div>
-          <img src="{% static 'images/right-3.jpg' %}" />
-        </article>
-
-        <article>
-          <h4>just in</h4>
-          <div>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-              repellendus?
-            </p>
-
-            <a href="#">Read More <span>>></span></a>
-          </div>
-          <img src="{% static 'images/right-4.jpg' %}" />
-        </article>
-
-        <article>
-          <h4>just in</h4>
-          <div>
-            <h2>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              iure doloremque fugiat ratione. Deserunt, adipisci?
-            </h2>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-              repellendus?
-            </p>
-
-            <a href="#">Read More <span>>></span></a>
-          </div>
-          <img src="{% static 'images/right-5.jpg' %}" />
-        </article>
+        <div id="right">
+        </div>
       </section>
     </main>
 {% endblock %}
