--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -72,8 +72,22 @@
 
         </div>
       </header>
-{% block 'news' %}
-{% endblock %}
+    <main>
+      <section class="main-container-left">
+        <h2>Top Stories</h2>
+        <div class="container-top-left">
+        </div>
+
+        <div class="container-bottom-left">
+        </div>
+      </section>
+
+      <section class="main-container-right">
+        <h2>Latest Stories</h2>
+        <div id="right">
+        </div>
+      </section>
+    </main>
      <footer>
       <div class="footer-container">
         <div class="footer-left">
