content writer info added

--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -64,11 +64,22 @@
         </div>
       </header>
       <div class="news">
-        <h1 class="headline">{{ HEADING }}</h1>
+       
+      
+        <div class="top">
+          <h1 class="headline">{{ HEADING }}</h1>
+            
+         <!--  content writer info -->
+          <p>By Content Writer</p>
+          <p class="castle">Castle Name</p>
+          <!--  content writer info -->
+            
+        </div>
+          
         <div class="image">
-
           <img src="/media/{{ PIC }}" alt="">
         </div>
+          
         <div class="content">
           <p>
               {{ NEWS }}
