--- a/Classicist Express/readMore/static/readmore.css
+++ b/Classicist Express/readMore/static/readmore.css
@@ -31,35 +31,6 @@ a {
   color: #000;
 }
 
-.btn {
-  font-size: 1.2rem;
-  width: 220px;
-  height: 50px;
-  margin: 1rem 0;
-  padding: 15px 45px;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: #fff;
-  border: none;
-  outline: none;
-  border-radius: 25px;
-  display: block;
-  background-image: linear-gradient(
-    to right,
-    #f09819 0%,
-    #edde5d 51%,
-    #f09819 100%
-  );
-  cursor: pointer;
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-}
-
-.btn:hover {
-  background-position: right center; /* change the direction of the change here */
-  color: #fff;
-  text-decoration: none;
-}
 /* header */
 
 .headline p {
@@ -256,13 +227,26 @@ a {
 }
 
 .news {
+  display: flex;
   margin: auto;
   width: 80vw;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.news .top {
+  margin: 50px 0 20px 0;
+  font-weight: bold;
 }
 
 .news h1 {
-  margin: 50px 0 20px 0;
-  text-align: justify;
+  font-size: 42px;
+  margin-bottom: 15px;
+}
+
+.news .top .castle {
+  opacity: 0.6;
+  font-style: italic;
 }
 
 .news .content {
@@ -277,21 +261,30 @@ a {
 }
 
 .image {
-  width: 80vw;
   height: 500px;
 }
+
 img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 @media (max-width: 850px) {
   .news h1 {
-    font-size: 28px;
+    font-size: 30px;
+  }
+
+  .top {
+    font-size: 13px;
   }
 
   .image {
-    height: 300px;
+    height: auto;
+    width: 80vw;
+  }
+
+  img {
+    object-fit: contain;
   }
 }
