--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -88,6 +88,13 @@
         </div>
       </section>
     </main>
+    <div class="news">
+      <section class="main-container-left">
+        <h2>News</h2>
+        <div class="container-bottom-left">
+        </div>
+      </section>
+    </div>
      <footer>
       <div class="footer-container">
         <div class="footer-left">
