--- a/Classicist Express/readMore/templates/readmore.html
+++ b/Classicist Express/readMore/templates/readmore.html
@@ -68,12 +68,7 @@
       
         <div class="top">
           <h1 class="headline">{{ HEADING }}</h1>
-            
-         <!--  content writer info -->
-          <p>By Content Writer</p>
-          <p class="castle">Castle Name</p>
-          <!--  content writer info -->
-            
+            <p>By <i>{{ NAME }}</i></p>
         </div>
           
         <div class="image">
