--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -73,7 +73,7 @@
         <span class="input-group-text" id="basic-addon1"
           ><i class="fas fa-times"></i
         ></span>
-        <input type="text" class="form-control" placeholder="Tags" name="tags" />
+        <input type="text" class="form-control" placeholder="Name" name="name" />
       </div>
 
      <input type="submit" class="btn btn-dark btn-lg" value="PUBLISH" />
