--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -111,6 +111,6 @@
 
     </footer>
 
-    <script src="{% static 'base.js' %}" async defer></script>
+    <script src="{% static 'base.js' %}"></script>
   </body>
 </html>
