--- a/Classicist Express/home/static/base.css
+++ b/Classicist Express/home/static/base.css
@@ -222,7 +222,7 @@ main a:hover {
 
 .main-container-right article {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 3fr 1fr;
   padding: 15px 0;
   border-bottom: 1px solid #d6ae67;
 }
