notification button style changed

--- a/Classicist Express/userID/static/user.css
+++ b/Classicist Express/userID/static/user.css
@@ -10,6 +10,12 @@
 body {
   background: #050505;
 }
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 @media (max-width: 800px) {
   .profile {
     display: flex;
