--- a/Classicist Express/readMore/static/readmore.css
+++ b/Classicist Express/readMore/static/readmore.css
@@ -288,3 +288,83 @@ img {
     object-fit: contain;
   }
 }
+
+/* comment-box */
+
+.comment-box {
+  width: 500px;
+}
+
+.comment-box h2 {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.comment-box input {
+  width: 100%;
+  height: 100%;
+  height: 50px;
+  padding: 0 20px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #d6ae67;
+  background: transparent;
+  font-family: "Times New Roman", sans-serif;
+}
+
+.comment-box input:focus {
+  outline: none;
+  border: 1px solid #000;
+}
+
+.comment-box textarea {
+  width: 100%;
+  height: 150px;
+  padding: 15px 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #d6ae67;
+  background: transparent;
+  font-family: "Times New Roman", sans-serif;
+  resize: none;
+}
+
+.comment-box textarea:focus {
+  outline: none;
+  border: 1px solid #000;
+}
+.btn {
+  font-size: 14px;
+  height: 50px;
+  margin: 1rem 0;
+  padding: 10px 30px;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  display: block;
+  background-image: linear-gradient(
+    to right,
+    #f09819 0%,
+    #edde5d 51%,
+    #f09819 100%
+  );
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+@media (max-width: 610px) {
+  .comment-box {
+    width: 80vw;
+  }
+}
+
