bold and italic button added

--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -63,7 +63,12 @@
         ></span>
         <input type="text" class="form-control" placeholder="Heading" name="heading" />
       </div>
-
+          
+        <!--  bold and italic button -->         
+        <button class="button"><i class="fas fa-bold"></i></button>
+        <button class="button"><i class="fas fa-italic"></i></button>
+        <!--  bold and italic button -->   
+          
       <div class="input-group textarea">
         <span class="input-group-text">Body</span>
         <textarea class="form-control" aria-label="With textarea" name="news"></textarea>
