--- a/Classicist Express/publish/static/publish.css
+++ b/Classicist Express/publish/static/publish.css
@@ -48,3 +48,15 @@ a {
   color: gray;
   padding-top: 20px;
 }
+
+.button {
+  background: transparent;
+  color: #000;
+  border: 1px solid #000;
+  padding: 5px 15px;
+  margin: 0 10px 1px 0;
+}
+
+.button:hover {
+  background: #000;
+  color: #fff;
