--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -54,17 +54,17 @@
                     <ul>
                         <li><a href = "{% url 'home' %}">Home</a></li>
                         <li><a href = "{% url 'bd' %}">Bangladesh Affairs</a></li>
-                        <li><a href = "{% url 'cultural' %}">Cultural insights</a></li>
-                        <li><a href = "{% url 'sports' %}">Sports insights</a></li>
+                        <li><a href = "{% url 'achievements' %}">International Affairs</a></li>
+                        <li><a href = "{% url 'cultural' %}">Cultural Insights</a></li>
+                        <li><a href = "{% url 'sports' %}">Sports Insights</a></li>
                         <li><a href = "{% url 'achievements' %}">Achievements</a></li>
-                        <li><a href = "{% url 'interview' %}">Small Talk with Gems</a></li>
-                        <li><a href = "{% url 'cc' %}">Cultural classicists</a></li>
+                        <li><a href = "{% url 'interview' %}">Small Talk With Gems</a></li>
+                        <li><a href = "{% url 'cc' %}">Cultural Classicists</a></li>
                         <li><a href = "{% url 'youth' %}">Youth</a></li>
-                        <li><a href = "{% url 'district' %}">district insights</a></li>
-                        <li><a href = "{% url 'comics' %}">comics</a></li>
-                        <li><a href = "{% url 'trending' %}">trending</a></li>
+                        <li><a href = "{% url 'district' %}">District Insights</a></li>
+                        <li><a href = "{% url 'comics' %}">Comics</a></li>
+                        <li><a href = "{% url 'trending' %}">Trending</a></li>
                         <li><a href = "{% url 'diversed' %}">Diversed</a></li>
-
                     </ul>
                 </nav>
             </div>
