--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -100,9 +100,7 @@
         <div class="footer-left">
           <h2>Cultural Classicists</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-            molestias aut blanditiis totam quia enim, autem tenetur cum facere,
-            fugit beatae at voluptas ipsum perferendis!
+            News portal for Cultural Classicists
           </p>
         </div>
 
