--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -65,8 +65,8 @@
       </div>
           
         <!--  bold and italic button -->         
-        <button class="button"><i class="fas fa-bold"></i></button>
-        <button class="button"><i class="fas fa-italic"></i></button>
+        <!-- <button class="button"><i class="fas fa-bold"></i></button>
+        <button class="button"><i class="fas fa-italic"></i></button> -->
         <!--  bold and italic button -->   
           
       <div class="input-group textarea">
