--- a/Classicist Express/home/templates/base.html
+++ b/Classicist Express/home/templates/base.html
@@ -38,7 +38,7 @@
               <div class="image">
                 <img src="{% static 'images/newslogo.png' %}" alt="">
               </div>
-              <p id="datetime"></p>
+              <p>{{ date }}</p>
             </div>
           </div>
 
