--- a/Classicist Express/userID/templates/user.html
+++ b/Classicist Express/userID/templates/user.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="{% static 'user.css' %}" />
-
+    <link rel="icon" href="{% static 'images/logo.png' %}">
     <title>{{ ID }} | Cultural Classist</title>
   </head>
   <body>
