--- a/Classicist Express/home/static/base.css
+++ b/Classicist Express/home/static/base.css
@@ -1,7 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/32441506567156636049eb850b53f02a?family=Times+New+Roman);
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
-
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -32,6 +30,10 @@ a {
 
 h1 {
   color: #d6ae67;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 /* header */
@@ -160,21 +162,25 @@ h1 {
 
 /** main ***/
 
-main a {
+main a,
+.news a {
   padding: 15px 0;
   display: block;
   transition: all 0.5s;
 }
 
-main span {
+main span,
+.news span {
   transition: padding-left 0.5s;
 }
 
-main a:hover span {
+main a:hover span,
+.news a:hover span {
   padding-left: 5px;
 }
 
-main a:hover {
+main a:hover,
+.news a:hover {
   color: #d6ae67;
 }
 
@@ -287,30 +293,6 @@ footer > p {
   margin-top: 20px;
 }
 
-.footer-right i {
-  font-size: 1.8rem;
-  color: #808080;
-}
-
-.footer-right input {
-  font-size: 18px;
-  border: none;
-  background: transparent;
-  outline: none;
-  color: #808080;
-  padding-right: 10px;
-  width: 100%;
-}
-
-.footer-right div {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  width: 200px;
-  padding: 10px 0;
-  border-bottom: 1.6px solid #808080;
-}
-
 @media (max-width: 460px) {
   .main-container-right article {
     display: block;
@@ -349,6 +331,37 @@ footer > p {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .news .container-bottom-left {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 980px) {
+  .news .container-bottom-left {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 590px) {
+  .news .container-bottom-left {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  footer {
+    font-size: 14px;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 422px) {
+  .news .container-bottom-left {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media (min-width: 800px) {
@@ -382,7 +395,7 @@ footer > p {
     top: 0;
   }
 
- .nav-bar::-webkit-scrollbar {
+  .nav-bar::-webkit-scrollbar {
     height: 5px;
   }
 
@@ -393,8 +406,6 @@ footer > p {
   .nav-bar::-webkit-scrollbar-thumb {
     background: #fff;
   }
-
-  
 
   .nav-bar nav ul {
     display: flex;
@@ -443,4 +454,14 @@ footer > p {
   .headline .image {
     width: 250px;
   }
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: justify;
 }
