name input icon changed

--- a/Classicist Express/publish/templates/publish.html
+++ b/Classicist Express/publish/templates/publish.html
@@ -76,7 +76,7 @@
 
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"
-          ><i class="fas fa-times"></i
+          ><i class="fas fa-signature"></i
         ></span>
         <input type="text" class="form-control" placeholder="Name" name="name" />
       </div>
