back button added

--- a/Classicist Express/registration/templates/registration.html
+++ b/Classicist Express/registration/templates/registration.html
@@ -134,7 +134,7 @@
             <div class="input-div">
               <div>
                 <input type="file" name="image" id="file" />
-                <label for="file" id="selector"><i class="fas fa-upload"></i> Add Your Image</label>
+                <label for="file" id="selector" class="upload"><i class="fas fa-upload"></i> Add Your Image</label>
               </div>
             </div>
           </div>
@@ -142,6 +142,11 @@
           <div class="form-field col-lg-12">
             <input type="submit" name="submit" class="btn" value="register" />
           </div>
+          
+          <div class="form-field col-lg-12 home-btn">
+            <a href="#">Back to Home </a>
+          </div>
+          
         </div>
       </form>
     </section>
